add various config for all modules